<resources>
    <string name="app_name">MemPool Space</string>
    <string name="app_unknown_error">Unknown error</string>
    <string name="nav_back">Back</string>
    <string name="bitcoin_address">Bitcoin Address</string>
    <string name="execute">Execute</string>
    <string name="start_over">Start over</string>
    <string name="result">Result:</string>
    <string name="page_title_mainnet">Mainnet</string>
    <string name="page_title_signet">Signet</string>
    <string name="page_title_testnet">Testnet</string>
    <string name="page_title_console">Console</string>
    <string name="page_title_settings">Settings</string>
    <string name="setting_mempool_url">Custom MemPool Url:</string>
    <string name="setting_mempool_url_reset">Reset</string>
    <string name="setting_mempool_url_save">Save</string>
    <string name="setting_mempool_url_invalid">Invalid MemPool Url</string>
    <string name="setting_actions_more">More</string>
    <string name="setting_actions_share_logs">Share logs</string>
    <string name="biometrics_labels">Biometrics</string>
    <string name="biometrics_action_retry">Retry</string>
    <string name="console_description">Explore the MemPool Api</string>
    <string name="console_mempool_api_region_address">Address</string>
    <string name="console_mempool_api_region_block">Block</string>
    <string name="console_mempool_api_region_mining">Mining</string>
    <string name="console_mempool_api_region_fees">Fees</string>
    <string name="console_mempool_api_region_mempool">Mempool</string>
</resources>
